--- a/react-parcel/src/index.css
+++ b/react-parcel/src/index.css
@@ -4,6 +4,10 @@
   justify-content: space-between;
   padding: 10px;
 }
+a {
+  text-decoration: none;
+  color: gray;
+}
 .menu_Items {
   display: flex;
   justify-content: center;
